--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "golangci-lint" %}
-{% set version = "1.59.1" %}
+{% set version = "1.61.0" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  git_url: https://github.com/golangci/{{ name }}.git
-  git_rev: v{{ version }}
+  url: https://github.com/golangci/golangci-lint/archive/v{{ version }}.tar.gz
+  sha256: f4efcc09dde3eb81ba7e2fc4230d3e99375a4b176dd28c31cab07371cf5c07db
 
 build:
   number: 0
